molar mass calculator 实现gui功能

--- a/scripts/example.ipynb
+++ b/scripts/example.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'msidat.molar_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m _path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mjlp10\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDesktop\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mzhuying\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;241m0\u001b[39m,_path)\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmsidat\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmsd\u001b[39;00m\n",
+      "File \u001b[1;32m~\\Desktop\\zhuying\\python\\msidat\\__init__.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tools\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m match\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m molar_mass\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m annotator\n",
+      "File \u001b[1;32m~\\Desktop\\zhuying\\python\\msidat\\match\\__init__.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompound_match\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompoundMatch\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgui\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompoundMatchGUI, main\n",
+      "File \u001b[1;32m~\\Desktop\\zhuying\\python\\msidat\\match\\gui.py:13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mloguru\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m logger\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompound_match\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CompoundMatch\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmolar_\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmol_mass_processor\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MolMassCalculator\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mQTextEditLogger\u001b[39;00m:\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;124;03m\"\"\"Custom loguru handler to redirect logs to QTextEdit\"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'msidat.molar_'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -2874,13 +2889,13 @@
     }
    ],
    "source": [
-    "from msidat.molar_cal.cal_molar_mass import MolarMassCalculator\n",
+    "from msidat.molar_mass.cal_molar_mass import MolarMassCalculator\n",
     "molar_mass_calculator = MolarMassCalculator()\n",
     "molar_mass_calculator.input_file = r'C:\\Users\\jlp10\\Desktop\\zhuying\\python\\msidat\\userdata\\Table S2 Database.xlsx'\n",
     "# molar_mass_calculator.input_sheet = 0\n",
     "molar_mass_calculator.output_file = r'C:\\Users\\jlp10\\Desktop\\zhuying\\python\\msidat\\userdata\\MSDatabase_new.xlsx'\n",
     "# molar_mass_calculator.compounds_col = 'Formula'\n",
-    "molar_mass_calculator.file_process()\n"
+    "molar_mass_calculator.process_file()\n"
    ]
   },
   {
